--- a/LLM_0(tarantino).ipynb
+++ b/LLM_0(tarantino).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU9hkMUtSuEy3/FAZfSEBp",
+      "authorship_tag": "ABX9TyOvNFNtkOat054bTt+R/vFz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,40 +23,40 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Sanjaya-Shastry/tarantino-LLM-NN-/blob/main/LLM_0(tarantino).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Sanjaya-Shastry/tarantino-LLM--feed-forward-NN-/blob/main/LLM_0(tarantino).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CXDtfYzUxdZJ",
-        "outputId": "062a4246-ea1a-4890-fe7a-f8c3160a52ed"
+        "outputId": "4330d462-4846-49d2-a92b-f52c6b8eebf3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-07-13 11:23:49--  https://raw.githubusercontent.com/Sanjaya-Shastry/tarantino-LLM-NN-/refs/heads/main/scripts.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2025-07-13 12:21:17--  https://raw.githubusercontent.com/Sanjaya-Shastry/tarantino-LLM--feed-forward-NN-/refs/heads/main/scripts.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 634257 (619K) [text/plain]\n",
-            "Saving to: ‘scripts.txt.5’\n",
+            "Length: 329361 (322K) [text/plain]\n",
+            "Saving to: ‘scripts.txt.6’\n",
             "\n",
-            "\rscripts.txt.5         0%[                    ]       0  --.-KB/s               \rscripts.txt.5       100%[===================>] 619.39K  --.-KB/s    in 0.06s   \n",
+            "scripts.txt.6       100%[===================>] 321.64K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2025-07-13 11:23:49 (10.8 MB/s) - ‘scripts.txt.5’ saved [634257/634257]\n",
+            "2025-07-13 12:21:17 (7.14 MB/s) - ‘scripts.txt.6’ saved [329361/329361]\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "!wget https://raw.githubusercontent.com/Sanjaya-Shastry/tarantino-LLM-NN-/refs/heads/main/scripts.txt"
+        "!wget https://raw.githubusercontent.com/Sanjaya-Shastry/tarantino-LLM--feed-forward-NN-/refs/heads/main/scripts.txt"
       ]
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "k0MhM3F65JMC"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "rNA8r7gX3L28"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "U0viRjuD3ZKO"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "AXB-MgMf3bI4"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -119,22 +119,22 @@
           "height": 36
         },
         "id": "-VONY7Bi37gZ",
-        "outputId": "6f8ad35b-4433-49ef-9cc6-15748da6db55"
+        "outputId": "a5e16286-37d7-4273-f094-039892ae7df8"
       },
-      "execution_count": 31,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'django unchained written by quentin tarantino i ext  countryside  broiling hot day as the films open'"
+              "\"django unchained written by quentin tarantino i ext - countryside - broiling hot day as the film's o\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 38
         }
       ]
     },
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "f7OmLXQY-JTu"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -163,9 +163,9 @@
           "height": 36
         },
         "id": "yv0UD2Gh-IOg",
-        "outputId": "fbe4d49a-0592-4218-e474-7f41b0bcbd23"
+        "outputId": "7af43521-a0e6-45eb-8ee0-2f6078486cd6"
       },
-      "execution_count": 32,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 40
         }
       ]
     },
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "-M0DiU3p4sPe"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "8LiSYlkG42uL"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -219,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tBka1vjgVcjq",
-        "outputId": "f8dbcee3-8cde-4191-af80-e7334ec38f6b"
+        "outputId": "b38b1aea-d404-4d4e-f03c-3680a28c1c9e"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +231,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 43
         }
       ]
     },
@@ -249,7 +249,7 @@
       "metadata": {
         "id": "Nm2hzFuK6o4e"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -261,7 +261,7 @@
       "metadata": {
         "id": "-VNClSzK7GM0"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -282,7 +282,7 @@
       "metadata": {
         "id": "AE5aYLUt7orV"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -293,7 +293,7 @@
       "metadata": {
         "id": "FYUfSMn1et2E"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "bHhByr1gfhPs"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -326,45 +326,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dRgpy7jlgMou",
-        "outputId": "af00fb59-a7d7-478c-dd5c-ba41d91bbc0f"
+        "outputId": "7c2f6796-9f9a-4272-e88a-c50e76b3d2a1"
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 18ms/step - accuracy: 0.3615 - loss: 2.2170 - val_accuracy: 0.4287 - val_loss: 1.9095\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 16ms/step - accuracy: 0.3615 - loss: 2.2175 - val_accuracy: 0.4310 - val_loss: 1.8941\n",
             "Epoch 2/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 17ms/step - accuracy: 0.5191 - loss: 1.5914 - val_accuracy: 0.4606 - val_loss: 1.8252\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 16ms/step - accuracy: 0.5182 - loss: 1.5902 - val_accuracy: 0.4601 - val_loss: 1.8216\n",
             "Epoch 3/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 17ms/step - accuracy: 0.5721 - loss: 1.3977 - val_accuracy: 0.4664 - val_loss: 1.8204\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 16ms/step - accuracy: 0.5723 - loss: 1.3942 - val_accuracy: 0.4653 - val_loss: 1.8144\n",
             "Epoch 4/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 16ms/step - accuracy: 0.6073 - loss: 1.2727 - val_accuracy: 0.4650 - val_loss: 1.8662\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 16ms/step - accuracy: 0.6071 - loss: 1.2709 - val_accuracy: 0.4640 - val_loss: 1.8396\n",
             "Epoch 5/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 16ms/step - accuracy: 0.6365 - loss: 1.1708 - val_accuracy: 0.4642 - val_loss: 1.9167\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 16ms/step - accuracy: 0.6380 - loss: 1.1681 - val_accuracy: 0.4681 - val_loss: 1.8791\n",
             "Epoch 6/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 15ms/step - accuracy: 0.6614 - loss: 1.0846 - val_accuracy: 0.4591 - val_loss: 1.9738\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 15ms/step - accuracy: 0.6642 - loss: 1.0745 - val_accuracy: 0.4644 - val_loss: 1.9707\n",
             "Epoch 7/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 16ms/step - accuracy: 0.6839 - loss: 1.0081 - val_accuracy: 0.4560 - val_loss: 2.0558\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 16ms/step - accuracy: 0.6845 - loss: 1.0053 - val_accuracy: 0.4640 - val_loss: 2.0386\n",
             "Epoch 8/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 15ms/step - accuracy: 0.7014 - loss: 0.9483 - val_accuracy: 0.4545 - val_loss: 2.1340\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 15ms/step - accuracy: 0.7054 - loss: 0.9375 - val_accuracy: 0.4517 - val_loss: 2.1085\n",
             "Epoch 9/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 16ms/step - accuracy: 0.7205 - loss: 0.8873 - val_accuracy: 0.4515 - val_loss: 2.2315\n",
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 16ms/step - accuracy: 0.7210 - loss: 0.8818 - val_accuracy: 0.4512 - val_loss: 2.2006\n",
             "Epoch 10/10\n",
-            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 17ms/step - accuracy: 0.7369 - loss: 0.8324 - val_accuracy: 0.4468 - val_loss: 2.3391\n"
+            "\u001b[1m2118/2118\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 16ms/step - accuracy: 0.7391 - loss: 0.8235 - val_accuracy: 0.4526 - val_loss: 2.2928\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7f4e0ee2a490>"
+              "<keras.src.callbacks.history.History at 0x7f4e0c36b710>"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 51
         }
       ]
     },
@@ -376,7 +376,7 @@
       "metadata": {
         "id": "mNihgy0QgYaD"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -414,13 +414,13 @@
       "metadata": {
         "id": "nvMMuOq5kfpe"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "generate_text('Broomhilda was',length=50)"
+        "generate_text('Django was a',length=50)"
       ],
       "metadata": {
         "colab": {
@@ -428,22 +428,22 @@
           "height": 36
         },
         "id": "lSHM3krHlXXl",
-        "outputId": "fa39e16e-2591-4539-c2bd-979b481e834d"
+        "outputId": "13797c16-a683-4336-9115-b30fae18f580"
       },
-      "execution_count": 28,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Broomhilda was a proat of a find them. she white men start with '"
+              "'Django was a little bit be fuck i dooth, and smilly love count'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 56
         }
       ]
     },
@@ -451,7 +451,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yi0NxNuvqrDM"
+        "id": "zOhc1xUtvCAw"
       },
       "execution_count": null,
       "outputs": []
